stopped it from cutting off accents

--- a/VerbApp/src/app/pages/conjugator/conjugator.page.scss
+++ b/VerbApp/src/app/pages/conjugator/conjugator.page.scss
@@ -60,6 +60,7 @@ ion-label.base{
   padding-bottom:5px;
   padding-right: 3px;
   padding-left:3px;
+  padding-top: 3px;
 }
 
 ion-label.translation{
